fix: stop title text cutoff

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -57,7 +57,7 @@ h1 {
   z-index: 2;
   text-overflow: ellipsis;
   word-break: break-word;
-  overflow: hidden;
+  /* overflow: hidden; */
   @media (width <= 500px) {
     font-size: 3.4em;
   }
